--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -55,7 +55,11 @@
       <section class="card" id="javascript-section">
        
         <h2>javascript</h2>
-
+      
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+        </ul>
 
       </section>
     </main>
@@ -63,6 +67,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
