--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="./assets/transparent-icon-cat-with-bow-tie-surprised-cat-cat-with-strip-cat-wearing-bow-tie-and-clothes-surprised-express658c5f87b78e98.4037746617036983117519.png" alt="Profile image of cat wearing a bow tie." />
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
